<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".InGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_ingame"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_weight="0"
            android:contentDescription="@string/ingame_profile_img" />

        <TextView
            android:id="@+id/name_summoner_ingame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLines="1"
            tools:text="Hestia sin" />

        <Button
            android:id="@+id/btn_ingame_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/see_ingame_win_rate"
            android:textSize="11sp" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/compare_ingame_stats"
        android:textSize="11sp" />

    <ListView
        android:id="@+id/listview_ingame_blue"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:background="#44166592"
        tools:listitem="@layout/listview_ingame_single" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#222526"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/champion"
            android:textColor="#D0CCC5"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/spell"
            android:textColor="#D0CCC5"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/name_and_tier"
            android:textColor="#D0CCC5"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/win_rate"
            android:textColor="#D0CCC5"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/etc"
            android:textColor="#D0CCC5"
            android:textSize="11sp"
            android:textStyle="bold" />
        <!--        <TextView-->
        <!--            android:layout_weight="1"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:gravity="center"-->
        <!--            android:text="빈칸 2"-->
        <!--            android:textColor="#D0CCC5"-->
        <!--            android:textSize="11sp" />-->
        <!--        <TextView-->
        <!--            android:layout_weight="1"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:gravity="center"-->
        <!--            android:text="빈칸 3"-->
        <!--            android:textColor="#D0CCC5"-->
        <!--            android:textSize="11sp" />-->

    </LinearLayout>

    <ListView
        android:id="@+id/listview_ingame_red"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#4489140E"
        tools:listitem="@layout/listview_ingame_single" />

</LinearLayout>
