<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".UserPhaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_summoner"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/user_phase_profile_img"
            tools:src="@drawable/profile_icon_4363" />

        <TextView
            android:id="@+id/tv_name_summoner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="#442C2E"
            android:textStyle="bold"
            tools:text="Hestia sin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_tier"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"

            android:background="@drawable/round_border"
            android:contentDescription="@string/user_phase_tier_img"
            android:gravity="center"
            tools:src="@drawable/emblem_silver" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tier1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="bottom|center_horizontal"
                android:textColor="#442C2E"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="실버 1" />

            <TextView
                android:id="@+id/tv_tier2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="top|center_horizontal"
                android:textColor="#442C2E"
                android:textSize="15sp"
                tools:text="점수: 78" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_phase_win_rate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="bottom|center_horizontal"
                android:textColor="#442C2E"
                android:textStyle="bold"
                tools:text="승률: (52.0%)" />

            <TextView
                android:id="@+id/tv_record_game"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autoSizeTextType="uniform"
                android:gravity="top|center_horizontal"
                android:lineSpacingExtra="-5dp"
                android:maxLines="2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="center"
                android:textColor="#442C2E"
                android:textSize="11sp"
                tools:text="승: 138 \n패: 126" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:background="@drawable/round_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="bottom|center_horizontal"
                android:textColor="#442C2E"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="K / D / A" />

            <TextView
                android:paddingTop="4dp"
                android:id="@+id/tv_user_phase_kill_death_assist"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="top|center_horizontal"
                android:textColor="#442C2E"
                android:textSize="13sp"
                tools:text="51.4/51.9/61.5" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_ingame_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="@string/ingame_inf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:text="@string/recent_game_record"
        android:textSize="20sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listview_user_phase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/all_border"
            android:visibility="invisible"
            tools:listitem="@layout/listview_user_phase_single"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_user_phase_loading"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="top|center_horizontal"
            android:contentDescription="@string/user_phase_loading_img"
            tools:src="@drawable/poro2"
            tools:visibility="invisible" />
    </FrameLayout>


</LinearLayout>
