<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">


    <ImageView
        android:id="@+id/img_record_champ"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/user_phase_single_champion_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/tryndamere" />


    <TextView
        android:id="@+id/tv_game_duration"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#442C2E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_record_champ"
        app:layout_constraintStart_toEndOf="@id/img_record_champ"
        app:layout_constraintTop_toTopOf="@id/img_record_champ"
        tools:text="22분 41초" />


    <TextView
        android:id="@+id/tv_record_kda"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColor="#442C2E"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_game_duration"
        app:layout_constraintTop_toTopOf="@id/img_record_champ"
        tools:text="13/11/11" />

    <TextView
        android:id="@+id/tv_record_average"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColor="#442C2E"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_record_champ"
        app:layout_constraintStart_toEndOf="@+id/tv_game_duration"
        tools:text="14.00" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="80dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="@id/img_record_champ"
        app:layout_constraintStart_toEndOf="@id/tv_record_average"
        app:layout_constraintTop_toTopOf="@id/img_record_champ">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="1dp">

            <ImageView
                android:id="@+id/Item0"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/all_border_ff"
                android:contentDescription="@string/user_phase_item_img"
                tools:src="@drawable/item_1001" />

            <ImageView
                android:id="@+id/Item1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/all_border_ff"
                android:contentDescription="@string/user_phase_item_img"
                tools:src="@drawable/item_1001" />

            <ImageView
                android:id="@+id/Item2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/all_border_ff"
                android:contentDescription="@string/user_phase_item_img"
                tools:src="@drawable/item_1001" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="25dp">

            <ImageView
                android:id="@+id/Item3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/all_border_ff"
                android:contentDescription="@string/user_phase_item_img"
                tools:src="@drawable/item_1001" />

            <ImageView
                android:id="@+id/Item4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/all_border_ff"
                android:contentDescription="@string/user_phase_item_img"
                tools:src="@drawable/item_1001" />

            <ImageView
                android:id="@+id/Item5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/all_border_ff"
                android:contentDescription="@string/user_phase_item_img" />

        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/btn_user_phase_single_detail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="#FEDBD0"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/detail_info"
        android:textColor="#442C2E"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>